--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -116,6 +116,24 @@ A Escala Likert é utilizada para mensurar tendências de uma questão ou afirma
   \end{center}
 \end{table}
 
+\begin{table}[h!]
+ \begin{center}
+\begin{tabular}{c|c}
+\hline
+Genero & Frequencia\\
+\hline
+Feminino & 183\\
+\hline
+Masculino & 1603\\
+\hline
+Outros & 6\\
+\hline
+\end{tabular}
+    \caption{Tabela de frequência por genero}
+     \label{table:2}
+  \end{center}
+\end{table}
+
 \subsection{Gráficos}
 \subsection{Glossário}
 
