atualização do relatório dia 03/12

--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -44,6 +44,7 @@
 \usepackage{makecell}
 \usepackage{color, colortbl}
 \date{ }
+\usepackage{indentfirst}
  
 \begin{document}
  
@@ -54,7 +55,7 @@
 \newpage
 \section{Introdução}
 
-Com rápido e surpreendente crescimento da industria dos jogos eletrónicos, como foi observado em 2016, onde a final do mundial do jogo League of Legends teve mais telespectadores do que os sete (7) jogos da final da NBA (\href{https://bit.ly/2Dvdtw9}{\textcolor{blue}{LoL vs NBA}}) e em uma outra situação, onde lançamento dos principais jogos tiveram lucros maiores do que blockbusters feitos em Hollywood  (\href{https://bit.ly/2FfWHTk}{\textcolor{blue}{Filmes vs Jogos}}), a análise do perfil de consumo dos usuários torna-se cada vez mais necessária para conquista e fidelização de seus usurários. Essa pesquisa visa fazer essa analise, de maneira não muito profunda, sobre usuários que vivem no Brasil. 
+Com o rápido e surpreendente crescimento da indústria dos jogos eletrónicos, como foi observado em 2016, onde a final do mundial do jogo League of Legends teve mais telespectadores do que os sete (7) jogos da final da NBA (\href{https://bit.ly/2Dvdtw9}{\textcolor{blue}{LoL vs NBA}}) e em uma outra situação, onde lançamento dos principais jogos tiveram lucros maiores do que blockbusters feitos em Hollywood  (\href{https://bit.ly/2FfWHTk}{\textcolor{blue}{Filmes vs Jogos}}), a análise do perfil de consumo dos usuários torna-se cada vez mais necessária para conquista e fidelização de seus usurários. Essa pesquisa visa fazer essa analise, de maneira não muito profunda, sobre usuários que vivem no Brasil. 
 \\ 
 \\
  
@@ -98,6 +99,21 @@ A Escala Likert é utilizada para mensurar tendências de uma questão ou afirma
 \end{itemize}
  
 \section{Conclusão}
+\indent
+Para a variável idade averiguamos por genero que todas as hipóteses da ANOVA foram verificadas segundo os testes necessários. Concluímos que a idades dos homens é menor que a das mulheres. (mencionar o bloxplot)
+
+A análise descritiva dos estados nos retorna que a maioria das pessoas que responderam são do estado de São Paulo, cerca de 32\%; e o Amapá foi o estado com apenas uma resposta . Verifique a proporção de respostas por estados na (colocar a referencia figura)
+
+Analisando as plataformas e os gêneros (lembrando que os jogadores puderam marcas mais de uma opção), notamos que os jogadores que possuem mais plataformas jogam mais gêneros diferentes do que os que possuem menos plataforma.
+
+
+Com base em uma análise descritiva, para os subgrupos da variável faixa etária (Adolescente, Jovem e Adulto) não houve diferença significativa analisando junto das seguintes variáveis: \textit{Tempo de jogo por semana}, \textit{Preço dos jogos}, \textit{Gastou mais dinheiro do que deveria}.
+
+
+
+
+
+
 
 \section{Apêndice}
 \subsection{Tabelas}
