--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -76,7 +76,7 @@ Depois de coletados os dados foram utilizados os software estatístico Rstudio e
 \item Pessoas com menos de 19 anos com Pós-Graduação
 \item Pessoas que responderam Nenhum na pergunta "Quais desses produtos relacionados a jogos você costuma comprar?"  e marcaram alguma outra opções na mesma pergunta.
 \end{enumerate}
-Usando os critérios citados acima tiramos cerca de 186 voluntários, totalizando assim um total de 1792 voluntários , sendo que desse total obtivemos 183 pessoas do gênero Feminino, 1603 do gênero Masculino e 6 declararam ter um gênero diferentes de Masculino  ou Feminino. 
+Usando os critérios citados acima tiramos cerca de 186 voluntários, totalizando assim 1792 voluntários , sendo que desse total obtivemos 183 pessoas do gênero Feminino, 1603 do gênero Masculino e 6 declararam ter um gênero diferentes de Masculino  ou Feminino. 
 \\
 
 Depois de tratada foi iniciada as analises estatísticas usando um $\alpha=5\%=0.05$, nessas analises foram usados os seguintes testes:
