Fizemos uma parte do relatorio

--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -80,6 +80,8 @@ Usando os critérios citados acima tiramos cerca de 186 voluntários, totalizand
 \\
 
 Depois de tratada foi iniciada as analises estatísticas usando um $\alpha=5\%=0.05$, nessas analises foram usados os seguintes testes:
+\newline
+
 \begin{itemize}[noitemsep,nolistsep]
 \item Kolmogorov–Smirnov
 \item Chi-Quadrado (Teste de Independência ou Homogeneidade)
@@ -87,6 +89,16 @@ Depois de tratada foi iniciada as analises estatísticas usando um $\alpha=5\%=0
 \item Levene
 \item Bonferroni
 \end{itemize}
+
+Para a variável idade foi criada as seguintes categoria:
+\newline
+
+\begin{itemize}[noitemsep,nolistsep]
+\item Adolescente - Entre  13 e 17 anos
+\item Jovens - Entre 18 e 24 anos
+\item Adultos - Entre 25 e 55 anos
+\end{itemize}
+
 
 \subsection{Escala Likert}
 
@@ -97,23 +109,28 @@ A Escala Likert é utilizada para mensurar tendências de uma questão ou afirma
 \item Média importância;
 \item Pouca importância;
 \end{itemize}
- 
-\section{Conclusão}
-\indent
-Para a variável idade averiguamos por genero que todas as hipóteses da ANOVA foram verificadas segundo os testes necessários. Concluímos que a idades dos homens é menor que a das mulheres. (mencionar o bloxplot)
+
+\section{Resultado Estatísticos} 
+
+Das pessoas que responderam 55\% são Jovens, 26\% são adolescente e 19\% são Adultos. Das idades observadas, a mínima foi de 13 anos e a máxima de 55 anos (mencionar tabela). Para o nível de significância  adotado, verificou-se todas as hipóteses necessária para realização do teste ANOVA. O teste ANOVA retornou um p-valor de $<0.0001$ indicando que há pelo menos uma média de idade diferente em seguida foi realizado o teste de Bonferroni que indicou  apenas a diferença da media das idades entre feminino e masculino e alem disso é possível observar que a media da idade feminina (25 anos) é maior do que a masculina (20 anos).
+
+
+
+89\% são do sexo masculino e 87\% são solteiros 
+
+
+averiguamos por gênero que todas as hipóteses da ANOVA foram verificadas segundo os testes necessários. Concluímos que a idades dos homens é menor que a das mulheres. 
+
 
 A análise descritiva dos estados nos retorna que a maioria das pessoas que responderam são do estado de São Paulo, cerca de 32\%; e o Amapá foi o estado com apenas uma resposta . Verifique a proporção de respostas por estados na (colocar a referencia figura)
 
 Analisando as plataformas e os gêneros (lembrando que os jogadores puderam marcas mais de uma opção), notamos que os jogadores que possuem mais plataformas jogam mais gêneros diferentes do que os que possuem menos plataforma.
 
-
 Com base em uma análise descritiva, para os subgrupos da variável faixa etária (Adolescente, Jovem e Adulto) não houve diferença significativa analisando junto das seguintes variáveis: \textit{Tempo de jogo por semana}, \textit{Preço dos jogos}, \textit{Gastou mais dinheiro do que deveria}.
-
-
-
-
-
-
+ 
+ 
+\section{Conclusão}
+\indent
 
 \section{Apêndice}
 \subsection{Tabelas}
