--- a/Relatorio/Trabalho 3/Relatorio.tex
+++ b/Relatorio/Trabalho 3/Relatorio.tex
@@ -126,7 +126,7 @@ As variáveis \textit{Tipo de Midia} e \textit{Preço dos jogos} são independen
 
 Para as seguintes variáveis: \textit{Grau de Escolaridade } \ref{subfig:grafico12},  \textit{Tipo de Midia} \ref{subfig:grafico9} e \textit{Preço Justo} \ref{subfig:grafico10}  foi observado estas proporções
 
-As seguinte variáveis: \textit{Quantidade de Jogos} (tabela \ref{table:5}0, \textit{Quantidade de Plataformas} (tabela \ref{table:4}), \textit{Estado Civil} (tabela \ref{table:6}) e \textit{Quantidade de Generos} (tabela \ref{table:2}) foi foram observados nos gráficos de pizza as seguintes proporções.
+As seguinte variáveis: \textit{Quantidade de Jogos} (tabela \ref{table:5}), \textit{Quantidade de Plataformas} (tabela \ref{table:4}), \textit{Estado Civil} (tabela \ref{table:6}) e \textit{Quantidade de Generos} (tabela \ref{table:2}) foi foram observados nos gráficos de pizza as seguintes proporções.
  
  
 \section{Conclusão}
@@ -304,7 +304,7 @@ Viuvo & 1  & 0.1\%\\
 }
 \\
 \vspace{1.5cm}
-\subfigure[Tipo de Midia]{ \label{subfig:grafico8}
+\subfigure['Você já deixou de jogar por causa dos requisitos mínimos?' ]{ \label{subfig:grafico11}
 \includegraphics[width=0.45\textwidth]{pizzarequisitos.png}
 }
 \subfigure[Tipo de Midia]{ \label{subfig:grafico9}
@@ -312,11 +312,11 @@ Viuvo & 1  & 0.1\%\\
 }
 \\
 \vspace{1.5cm}
-\subfigure[Tipo de Midia]{ \label{subfig:grafico10}
+\subfigure['Você acha justo o preço pago pelos jogos no Brasil?']{ \label{subfig:grafico10}
 \includegraphics[width=0.45\textwidth]{pizzapreco.png}
 }
-\subfigure[Tipo de Midia]{ \label{subfig:grafico11}
-\includegraphics[width=0.45\textwidth]{pizzarequisitos.png}
+\subfigure['Já gastou mais dinheiro do que tinha ou devia com jogos?']{ \label{subfig:grafico11}
+\includegraphics[width=0.45\textwidth]{pizzadinheiro.png}
 }
 \end{figure}
 
